--- a/cmd/sling/tests/replications/r.44.staged_transforms_test.yaml
+++ b/cmd/sling/tests/replications/r.44.staged_transforms_test.yaml
@@ -126,6 +126,9 @@ streams:
         - type: check  
           check: store.result[0].email == "john@example.com"  # lowercased
 
+        - type: check  
+          check: length(store.result[0].email_hash) > 30
+
         - type: check
           check: store.result[0].full_name == "John Doe"  # record reference combining trimmed names
 
