fix: update Prometheus YAML configurations to ensure proper date formatting and SQL column definitions

--- a/cmd/sling/tests/replications/r.25.prometheus_buffer.yaml
+++ b/cmd/sling/tests/replications/r.25.prometheus_buffer.yaml
@@ -9,6 +9,8 @@ defaults:
 
 streams:
   prometheus_metrics:
+    transforms:
+      - event_date: date_format(now(), "%Y-%m-%d")
     sql: |
       up#{"start": "now-30m", "end": "now", "step": "5m"}
     object: '/tmp/prometheus_test_{run_timestamp}.csv'
