--- a/cmd/sling/tests/replications/r.25.prometheus_buffer.yaml
+++ b/cmd/sling/tests/replications/r.25.prometheus_buffer.yaml
@@ -11,6 +11,8 @@ streams:
   prometheus_metrics:
     transforms:
       - event_date: date_format(now(), "%Y-%m-%d")
+    # columns:
+    #   '*': string
     sql: |
       up#{"start": "now-30m", "end": "now", "step": "5m"}
-    object: '/tmp/prometheus_test_{run_timestamp}.csv'
+    object: '/tmp/prometheus_test.csv'
