--- a/cmd/sling/tests/replications/r.47.mssql_uniqueidentifier.postgres.yaml
+++ b/cmd/sling/tests/replications/r.47.mssql_uniqueidentifier.postgres.yaml
@@ -1,5 +1,5 @@
 source: MSSQL
-target: MSSQL
+target: POSTGRES
 
 defaults:
   mode: full-refresh
@@ -11,7 +11,6 @@ hooks:
       query: |
         -- Drop temp tables if they exist
         IF OBJECT_ID('dbo.unique_identifier_test', 'U') IS NOT NULL DROP TABLE dbo.unique_identifier_test;
-        IF OBJECT_ID('dbo.unique_identifier_test2', 'U') IS NOT NULL DROP TABLE dbo.unique_identifier_test2;
         
         -- Create source table with uniqueidentifier column
         CREATE TABLE dbo.unique_identifier_test (
@@ -34,13 +33,13 @@ hooks:
       connection: '{target.name}'
       query: |
         -- Verify target table structure
-        SELECT 
+        SELECT
           c.COLUMN_NAME,
           c.DATA_TYPE,
           c.CHARACTER_MAXIMUM_LENGTH,
           c.IS_NULLABLE
         FROM INFORMATION_SCHEMA.COLUMNS c
-        WHERE c.TABLE_SCHEMA = 'dbo' 
+        WHERE c.TABLE_SCHEMA = 'public'
           AND c.TABLE_NAME = 'unique_identifier_test2'
           AND c.COLUMN_NAME = 'guid_col'
       into: column_info
@@ -51,57 +50,54 @@ hooks:
         {store.column_info}
 
     - type: check
-      check: store.column_info[0].data_type == "uniqueidentifier"
-      success_message: "guid_col should be 'uniqueidentifier' type in target"
+      check: store.column_info[0].data_type == "uuid"
+      success_message: "guid_col should be 'uuid' type in target PostgreSQL"
 
     - type: query
       connection: '{target.name}'
       query: |
-        -- Compare source and target data
-        SELECT 
-          s.id,
-          s.guid_col as source_guid,
-          t.guid_col as target_guid,
-          s.name,
-          CASE 
-            WHEN s.guid_col IS NULL AND t.guid_col IS NULL THEN 'MATCH'
-            WHEN CAST(s.guid_col AS VARCHAR(50)) = CAST(t.guid_col AS VARCHAR(50)) THEN 'MATCH'
-            ELSE 'MISMATCH'
-          END as guid_match
-        FROM dbo.unique_identifier_test s
-        INNER JOIN dbo.unique_identifier_test2 t ON s.id = t.id
-        ORDER BY s.id
-      into: comparison_result
+        -- Get all target data
+        SELECT
+          id,
+          guid_col::text as guid_text,
+          name
+        FROM public.unique_identifier_test2
+        ORDER BY id
+      into: target_data
 
     - type: log
       message: |
-        Data comparison:
-        {store.comparison_result}
+        Target data:
+        {store.target_data}
 
     - type: check
-      check: store.comparison_result[0].guid_match == "MATCH"
-      success_message: "GUID value for record 1 should match"
+      check: upper(store.target_data[0].guid_text) == "6F9619FF-8B86-D011-B42D-00C04FC964FF"
+      success_message: "GUID value for record 1 matches"
 
     - type: check
-      check: store.comparison_result[1].guid_match == "MATCH"
+      check: upper(store.target_data[1].guid_text) == "A0E44FF6-8B86-D011-B42D-00C04FC964FF"
+      success_message: "GUID value for record 2 matches"
 
     - type: check
-      check: store.comparison_result[2].guid_match == "MATCH"
+      check: length(store.target_data[2].guid_text) == 36
+      success_message: "GUID value for record 3 has valid format"
 
     - type: check
-      check: store.comparison_result[3].guid_match == "MATCH"
+      check: store.target_data[3].guid_text == nil
+      success_message: "GUID value for record 4 is NULL as expected"
 
     - type: check
-      check: store.comparison_result[4].guid_match == "MATCH"
-      success_message: "GUID value for record 5 should match"
+      check: upper(store.target_data[4].guid_text) == "12345678-1234-5678-1234-567812345678"
+      success_message: "GUID value for record 5 matches"
+
+    - type: query
+      connection: '{source.name}'
+      query: DROP TABLE dbo.unique_identifier_test;
 
     - type: query
       connection: '{target.name}'
-      query: |
-        -- Cleanup
-        DROP TABLE dbo.unique_identifier_test;
-        DROP TABLE dbo.unique_identifier_test2;
+      query: DROP TABLE public.unique_identifier_test2;
 
 streams:
   dbo.unique_identifier_test:
-    object: dbo.unique_identifier_test2
+    object: public.unique_identifier_test2
