fix: add SLING_THREADS environment variable for replication configuration

--- a/cmd/sling/tests/replications/apis/r.stripe.yaml
+++ b/cmd/sling/tests/replications/apis/r.stripe.yaml
@@ -16,3 +16,4 @@ streams:
 env:
   SLING_STATE: postgres/sling_state.stripe # one state table per replication
   SLING_LOADED_AT_COLUMN: timestamp
+  SLING_THREADS: 2
