--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -18,4 +18,4 @@ jobs:
           repo: slingdata-io/sling
           workflow: .github/workflows/build-dev.yml
           ref: ${{ github.ref }}
-          inputs: '{"backend": "true"}'
+          inputs: '{"backend": "true", "deploy": "false"}'
