--- a/cmd/sling/tests/pipelines/p.05.extra_parquet_files_deletion.yaml
+++ b/cmd/sling/tests/pipelines/p.05.extra_parquet_files_deletion.yaml
@@ -32,6 +32,7 @@ steps:
   - type: replication
     id: write_to_s3_first
     path: cmd/sling/tests/pipelines/p.05.replication.yaml
+    on_failure: abort
 
   # List files created
   - type: list
@@ -58,6 +59,7 @@ steps:
   - type: replication
     id: write_to_s3_second
     path: cmd/sling/tests/pipelines/p.05.replication.yaml
+    on_failure: abort
 
   # List files again to check if old ones still exist
   - type: list
