--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -1,10 +1,12 @@
-name: Build Dev
+name: Build Dev (Trigger)
 
 on:
   workflow_dispatch:
   push:
     branches-ignore:
       - main
+    paths-ignore:
+      - '.github/**'
 
 jobs:
   trigger:
