--- a/scripts/dev/.goreleaser.windows.yaml
+++ b/scripts/dev/.goreleaser.windows.yaml
@@ -5,7 +5,7 @@ project_name: sling
 before:
   hooks:
     - go mod edit -dropreplace='github.com/flarco/g' go.mod
-    - go mod edit -dropreplace='github.com/slingdata-io/sling' go.mod
+    # - go mod edit -dropreplace='github.com/slingdata-io/sling' go.mod
     - go mod tidy
 
 builds:
