--- a/scripts/dev/.goreleaser.linux.arm64.yaml
+++ b/scripts/dev/.goreleaser.linux.arm64.yaml
@@ -5,8 +5,8 @@ project_name: sling
 before:
   hooks:
     - go mod edit -dropreplace='github.com/flarco/g' go.mod
-    - go mod edit -dropreplace='github.com/slingdata-io/sling' go.mod
-    - go mod edit -droprequire='github.com/slingdata-io/sling' go.mod
+    # - go mod edit -dropreplace='github.com/slingdata-io/sling' go.mod
+    # - go mod edit -droprequire='github.com/slingdata-io/sling' go.mod
     - go mod tidy
 
 builds:
