feat: add limit clause to core table definition in athena.yaml

--- a/core/dbio/templates/athena.yaml
+++ b/core/dbio/templates/athena.yaml
@@ -18,6 +18,7 @@ core:
     )
     stored as parquet
     location '{location}'
+  limit: select {fields} from {table}{where_clause} limit {limit}
   limit_sql: |
     select * from (
       {sql}
