--- a/core/dbio/templates/fabric.yaml
+++ b/core/dbio/templates/fabric.yaml
@@ -1,13 +1,10 @@
 core:
   drop_table: IF OBJECT_ID(N'{table}', N'U') IS NOT NULL DROP TABLE {table}
   drop_view: IF OBJECT_ID(N'{view}', N'V') IS NOT NULL DROP VIEW {view}
-  drop_index: |
-    if exists (
-      select name
-      from sys.indexes
-      where name = '{name}' and object_id = OBJECT_ID('{table}')
-    ) drop index {index} on {table}
   replace: insert into {table} ({fields}) values ({values}) on conflict ({pk_fields}) do update set {set_fields}
+  create_index: "select 'indexes do not apply for fabric'"
+  create_unique_index: "select 'indexes do not apply for fabric'"
+  drop_index: "select 'indexes do not apply for fabric'"
   replace_temp: |
     insert into {table} ({names})
     select {names} from {temp_table}
@@ -46,6 +43,26 @@ core:
   add_column: alter table {table} add {column} {type}
   alter_columns: alter table {table} alter column {col_ddl}
   modify_column: '{column} {type}'
+
+  # https://learn.microsoft.com/en-us/fabric/data-warehouse/ingest-data-copy
+  copy_from_onelake_csv: |
+    COPY INTO {table} ({tgt_columns})
+    FROM '{onelake_path}'
+    WITH (
+      FILE_TYPE = 'CSV',
+      FIELDTERMINATOR = ',',
+      ROWTERMINATOR = '\n',
+      FIRSTROW = 2,
+      COMPRESSION = 'Gzip',
+      ENCODING = 'UTF8'{credential_expr}
+    )
+
+  copy_from_onelake_parquet: |
+    COPY INTO {table} ({tgt_columns})
+    FROM '{onelake_path}'
+    WITH (
+      FILE_TYPE = 'PARQUET'{credential_expr}
+    )
 
 
 metadata:
@@ -348,7 +365,7 @@ function:
   truncate_f: round({field}, 2, 1)
   truncate_datef: CONVERT(DATETIME, CONVERT(DATE, {field}))
   sleep: waitfor delay '00:00:{seconds}.000'
-  cast_to_text: 'cast({field} as nvarchar(max))'
+  cast_to_text: 'cast({field} as varchar(max))'
   checksum_string: datalength({field})
   checksum_integer: 'CAST({field} as bigint)'
   checksum_boolean: len({field})
@@ -363,7 +380,7 @@ variable:
   timestamp_layout_str: "cast('{value}' as datetime2)"
 
   # https://stackoverflow.com/a/17867687/2295355
-  timestampz_layout_str: "ToDateTimeOffset('{value}')"
+  timestampz_layout_str: "cast('{value}' as datetime2)"
   timestampz_layout: "2006-01-02 15:04:05.0000000', '-07:00"
   
   bind_string: "@p{c}"
@@ -371,6 +388,6 @@ variable:
   batch_values: 1000
   bool_as: string
   error_filter_table_exists: already
-  max_string_type: nvarchar(max)
+  max_string_type: varchar(max)
   max_string_length: 4000
   max_column_length: 128
