feat: enhance DuckDB integration with parquet support and improved error handling

--- a/cmd/sling/tests/replications/r.55.json_snowflake_nested.yaml
+++ b/cmd/sling/tests/replications/r.55.json_snowflake_nested.yaml
@@ -36,6 +36,9 @@ streams:
     mode: full-refresh
     source_options:
       flatten: 1
+    target_options:
+      format: parquet
 
 env:
   SLING_SAMPLE_SIZE: 100
+  SLING_DUCKDB_COMPUTE: true
