--- a/core/dbio/api/api_suite.yaml
+++ b/core/dbio/api/api_suite.yaml
@@ -153,7 +153,7 @@
           records:
             jmespath: results
         pagination:
-          stop_condition: "response.json.meta.next_cursor == null"
+          stop_condition: "is_null(response.json.meta.next_cursor)"
           next_state:
             cursor: "{state.next_cursor}"
             limit: "{state.page_size}"
@@ -214,7 +214,7 @@
           records:
             jmespath: data
         pagination:
-          stop_condition: "!state.has_more || state.token == null"
+          stop_condition: "!state.has_more || is_null(state.token)"
           next_state:
             # Use coalesce to handle null per_page
             limit: "{ coalesce(response.json.pagination.per_page, state.default_limit) }"
