fix: update check messages to use failure_message for GUID validation and add SQL setup for uniqueidentifier tests

--- a/cmd/sling/tests/replications/r.47.fabric_uniqueidentifier.yaml
+++ b/cmd/sling/tests/replications/r.47.fabric_uniqueidentifier.yaml
@@ -80,7 +80,7 @@ hooks:
 
     - type: check
       check: store.comparison_result[0].guid_match == "MATCH"
-      success_message: "GUID value for record 1 should match"
+      failure_message: "GUID value for record 1 should match"
 
     - type: check
       check: store.comparison_result[1].guid_match == "MATCH"
@@ -93,7 +93,7 @@ hooks:
 
     - type: check
       check: store.comparison_result[4].guid_match == "MATCH"
-      success_message: "GUID value for record 5 should match"
+      failure_message: "GUID value for record 5 should match"
 
     - type: query
       connection: '{target.name}'
