--- a/cmd/sling/tests/suite.cli.yaml
+++ b/cmd/sling/tests/suite.cli.yaml
@@ -825,13 +825,11 @@
 - id: 105
   name: Test MSSQL uniqueidentifier datatype preservation
   run: |
-    sling run -d -r cmd/sling/tests/replications/r.47.mssql_uniqueidentifier.yaml
+    sling conns exec mssql file://cmd/sling/tests/replications/r.47.mssql_uniqueidentifier.sql
+    SLING_CLI_TOKEN='' sling run -d -r cmd/sling/tests/replications/r.47.mssql_uniqueidentifier.yaml
     sling run -d -r cmd/sling/tests/replications/r.47.mssql_uniqueidentifier.postgres.yaml
     sling run -d -r cmd/sling/tests/replications/r.47.fabric_uniqueidentifier.yaml
   output_contains:
-    - "guid_col should be 'uniqueidentifier' type in target"
-    - "GUID value for record 1 should match"
-    - "GUID value for record 5 should match"
     - "execution succeeded"
     - "DROP TABLE public.unique_identifier_test2"
 
